syntax = "proto3";

option go_package = ".;office_svc";

package office_svc;

import "empty.proto";

message data {
  int32 id = 1;
  string name = 2;
}

message SearchOfficeResponse {
  repeated office_svc.data data = 1;
}

message SearchOfficeRequest {
  google.protobuf.Empty empty = 1;
}

service OfficeService {
  rpc SearchOffice(SearchOfficeRequest) returns (SearchOfficeResponse) {};
}

